fixed splash on mobile

--- a/style.css
+++ b/style.css
@@ -1630,7 +1630,7 @@ textarea .form-control {
 	}
 	
 	#splash-title{
-		font-size: 3em;
+		font-size: 2.8em;
 	}
 	
 	#splash-tagline{
